--- a/Auth Site/package.json
+++ b/Auth Site/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "bootstrap-icons": "^1.11.3",
     "react": "^18.3.1",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
