--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "bootstrap": "^5.3.3",
+    "prop-types": "^15.8.1",
     "react-bootstrap": "^2.10.4",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2"
