--- a/Auth Site/package.json
+++ b/Auth Site/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "bootstrap-icons": "^1.11.3",
     "react": "^18.3.1",
     "react-bootstrap-icons": "^1.11.4",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
